test new approach

--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,25 +1,22 @@
 <odoo>
-    <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
-        <field name="name">hr.employee.form.attendance.minimal</field>
-        <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr.view_employee_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//notebook" position="inside">
-                <page string="Attendance">
-                    <field name="attendance_ids" widget="one2many_list">
-                        <tree editable="bottom">
-                            <field name="check_in"/>
-                            <field name="check_out"/>
-                        </tree>
-                        <form>
-                            <group>
+    <data>
+        <record id="view_employee_form_attendance_tab" model="ir.ui.view">
+            <field name="name">hr.employee.form.attendance.tab</field>
+            <field name="model">hr.employee</field>
+            <field name="inherit_id" ref="hr.view_employee_form"/>
+            <field name="arch" type="xml">
+                <notebook position="inside">
+                    <page string="Attendance History">
+                        <field name="attendance_history_ids" nolabel="1">
+                            <tree>
                                 <field name="check_in"/>
                                 <field name="check_out"/>
-                            </group>
-                        </form>
-                    </field>
-                </page>
-            </xpath>
-        </field>
-    </record>
+                                <field name="worked_hours"/>
+                            </tree>
+                        </field>
+                    </page>
+                </notebook>
+            </field>
+        </record>
+    </data>
 </odoo>
