--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -12,10 +12,14 @@
 
             <!-- Put both fields just below Job Position -->
             <xpath expr="//field[@name='job_title']" position="after">
-                <group inline="True">
-                <field name="test_field" placeholder="Test:- Enter your location here..."/>
-                <field name="joining_date" placeholder="Select joining date"/>
-                <field name="experience_text" readonly="1"/>
+                 <!-- Horizontal group -->
+                <group string="Employment Info">
+                    <group inline="True">
+                        <field name="test_field" placeholder="Test:- Free Text..." />
+                        <field name="joining_date" placeholder="Select joining date" />
+                        <field name="experience_text" readonly="1"/>
+                    </group>
+                </group>
                 </group>
             </xpath>
         </field>
