--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <!-- ============================= -->
     <!-- Tree View for Attendance Lines -->
+    <!-- ============================= -->
     <record id="view_employee_attendance_line_tree" model="ir.ui.view">
         <field name="name">employee.attendance.line.tree</field>
         <field name="model">employee.attendance.line</field>
@@ -15,7 +17,9 @@
         </field>
     </record>
 
+    <!-- ============================= -->
     <!-- Form View for Attendance Lines -->
+    <!-- ============================= -->
     <record id="view_employee_attendance_line_form" model="ir.ui.view">
         <field name="name">employee.attendance.line.form</field>
         <field name="model">employee.attendance.line</field>
@@ -34,26 +38,32 @@
         </field>
     </record>
 
+    <!-- ============================= -->
     <!-- Action to Open Attendance Lines -->
+    <!-- ============================= -->
     <record id="action_employee_attendance_line" model="ir.actions.act_window">
         <field name="name">Attendance Lines</field>
         <field name="res_model">employee.attendance.line</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <!-- Menu Item -->
+    <!-- ============================= -->
+    <!-- Menu Items -->
+    <!-- ============================= -->
     <menuitem id="menu_employee_attendance_root" name="Attendance" sequence="10"/>
     <menuitem id="menu_employee_attendance_line" name="Attendance Lines"
               parent="menu_employee_attendance_root"
               action="action_employee_attendance_line"/>
 
+    <!-- ======================================= -->
     <!-- Inherit Employee Form to Add Attendance Tab -->
+    <!-- ======================================= -->
     <record id="view_employee_form_inherit_daily_attendance" model="ir.ui.view">
         <field name="name">hr.employee.form.daily.attendance</field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-            <notebook position="inside">
+            <xpath expr="//notebook" position="inside">
                 <page string="Daily Attendance">
                     <field name="attendance_line_ids">
                         <tree editable="bottom">
@@ -64,7 +74,7 @@
                         </tree>
                     </field>
                 </page>
-            </notebook>
+            </xpath>
         </field>
     </record>
 </odoo>
