--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -21,6 +21,14 @@
                     </group>
                 </group>
             </xpath>
+
+            <!-- Place after Job Title -->
+            <xpath expr="//field[@name='job_title']" position="after">
+                <group string="Dependent Fields Example">
+                    <field name="main_choice"/>
+                    <field name="dependent_choice"/>
+                </group>
+            </xpath>
         </field>
     </record>
 </odoo>
