--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -22,13 +22,13 @@
                 </group>
             </xpath>
 
-            <!-- Place after Job Title -->
+            <!-- Place after Job Title
             <xpath expr="//field[@name='job_title']" position="after">
                 <group string="Dependent Fields Example">
                     <field name="main_choice"/>
                     <field name="dependent_choice"/>
                 </group>
-            </xpath>
+            </xpath> -->
         </field>
     </record>
 </odoo>
