--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -26,7 +26,7 @@
             <xpath expr="//field[@name='job_title']" position="after">
                 <group string="Dependent Fields Example">
                     <field name="main_choice"/>
-                    <field name="dependent_choice"/>
+                    <field name="dependent_client"/>
                 </group>
             </xpath>
         </field>
