--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -10,23 +10,23 @@
             <field name="test_field" placeholder="Test:- Enter your preferred location here..."/>
             </xpath>
 
-            <!-- Put both fields just below Job Position -->
-            <xpath expr="//field[@name='job_title']" position="after">
+            <!-- Put both fields just below Job Position
+            <xpath expr="//field[@name='job_title']" position="after"> -->
                  <!-- Horizontal group -->
-                <group string="Employment Info" class="o_horizontal_field_group">
+                <!-- <group string="Employment Info" class="o_horizontal_field_group">
                     <group inline="True">
                         <field name="test_field" placeholder="Test:- Free Text..." />
                         <field name="joining_date" placeholder="Select joining date" />
                         <field name="experience_text" readonly="1"/>
                     </group>
                 </group>
-            </xpath>
+            </xpath> -->
 
             <!-- Place after Job Title -->
             <xpath expr="//field[@name='job_title']" position="after">
                 <group string="Dependent Fields Example">
                     <field name="main_choice"/>
-                    <field name="dependent_client"/>
+                    <field name="dependent_client" context="{'main_choice': main_choice}"/>
                 </group>
             </xpath>
         </field>
