--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -26,7 +26,7 @@
 
             <!-- Client Dropdown appears after button click -->
             <xpath expr="//field[@name='job_title']" position="after">
-                <group string="Client Selection" invisible="1">
+                <group string="Client Selection" attrs="{'invisible': [('client_visible','=',False)]}">
                     <field name="client_choice" options="{'no_create': True}"/>
                 </group>
             </xpath>
