--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -27,7 +27,9 @@
                 <group string="Client Selection">
                     <field name="client_choice"
                            invisible="not client_visible"
-                           options="{'no_create': True}"/>
+                           attrs="{'invisible': [('client_visible', '=', False)]}"
+                           options="{'no_create': True}"
+                           placeholder="Select city here..."/>
                 </group>
 
             </xpath>
