--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,27 +1,12 @@
-<odoo>
-    <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
-        <field name="name">hr.employee.form.attendance.minimal</field>
+  <record id="hr_employee_view_form_attendance_extension" model="ir.ui.view">
+        <field name="name">hr.employee.view.form.attendance.extension</field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-            <field name="check_in" invisible="1"/>
-            <field name="check_out" invisible="1"/>
-            <xpath expr="//notebook" position="inside">
-                <page string="Attendance">
-                    <field name="attendance_ids" widget="section_and_content">
-                        <tree editable="bottom">
-                            <field name="check_in"/>
-                            <field name="check_out"/>
-                        </tree>
-                        <form>
-                            <group>
-                                <field name="check_in"/>
-                                <field name="check_out"/>
-                            </group>
-                        </form>
-                    </field>
+            <notebook position="inside">
+                <page string="Attendances" name="attendances">
+                    <field name="attendance_ids" readonly="1"/>
                 </page>
-            </xpath>
+            </notebook>
         </field>
     </record>
-</odoo>
