--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,12 +1,12 @@
-  <record id="hr_employee_view_form_attendance_extension" model="ir.ui.view">
-        <field name="name">hr.employee.view.form.attendance.extension</field>
-        <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr.view_employee_form"/>
-        <field name="arch" type="xml">
-            <notebook position="inside">
-                <page string="Attendances" name="attendances">
-                    <field name="attendance_ids" readonly="1"/>
-                </page>
-            </notebook>
-        </field>
-    </record>
+<record id="hr_employee_view_form_attendance_extension" model="ir.ui.view">
+    <field name="name">hr.employee.view.form.attendance.extension</field>
+    <field name="model">hr.employee</field>
+    <field name="inherit_id" ref="hr.view_employee_form"/>
+    <field name="arch" type="xml">
+        <xpath expr="//notebook" position="inside">
+            <page string="Attendances" name="attendances">
+                <field name="attendance_ids" readonly="1"/>
+            </page>
+        </xpath>
+    </field>
+</record>
