--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -24,7 +24,7 @@
                 </group>
 
                 <!-- Client Dropdown (after buttons) -->
-                <field name="client_choice" invisible="1" modifiers="{'invisible': [('client_visible','=',False)]}" options="{'no_create': True}"/>
+                <field name="client_choice" modifiers="{'invisible': [('client_visible','=',False)]}" options="{'no_create': True}"/>
 
                 <!-- <group string="Client Selection">
                     <field name="client_choice"
