--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -3,7 +3,7 @@
     <field name="model">hr.employee</field>
     <field name="inherit_id" ref="hr.view_employee_form"/>
     <field name="arch" type="xml">
-        <xpath expr="//page[@string='HR Settings']" position="inside">
+        <xpath expr="//page[@string='hr_settings']" position="inside">
             <page string="Attendances" name="attendances">
                 <field name="attendance_ids" readonly="1"/>
             </page>
