--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -23,9 +23,17 @@
                 </group>
 
                 <!-- Region Message -->
-                <field name="region_message"
+                <!-- <field name="region_message"
                        readonly="1"
-                       modifiers="{'invisible': [('region_visible','=',False)]}"/>
+                       modifiers="{'invisible': [('region_visible','=',False)]}"/> -->
+                
+                                <!-- Region Message + Radio buttons in same row -->
+                <group string="Region Info" class="o_horizontal_field_group"
+                       modifiers="{'invisible': [('region_visible','=',False)]}">
+                    <field name="region_message" readonly="1"/>
+                    <field name="choice_option" widget="radio"/>
+                </group>
+
             </xpath>
         </field>
     </record>
