--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -5,7 +5,7 @@
     <field name="arch" type="xml">
         <xpath expr="//sheet/notebook" position="inside">
             <page string="Attendances" name="attendances">
-                <field name="attendance_ids" readonly="1"/>
+              #  <field name="attendance_ids" readonly="1"/>
             </page>
         </xpath>
     </field>
